www/assets/css/duplicati2.less
/*
	// Mixins
*/

/*
	// Colours
*/

@white: #ffffff;
@slate: #171F20;
@lighter-slate: #607D87;
@green: #309149;
@red: #D4412F;
@yellow: #EAB251;
@purple: #9B496F;
@blue: #448392;

@text: @white;
@text-faded: lighten(mix(@box, @slate, 20%), 25%); //fade(@white, 50%);
@text-faded-active3: mix(mix(@box, @slate, 50%), @white, 25%);
@text-faded-active: mix(@blue, @white, 55%);

@a: mix(mix(@box, @slate, 50%), @white, 25%);
@a-faded: mix(@a, @slate, 10%);

@box: @blue;
@box-faded: mix(@box, @slate, 20%); //fade(@box, 20%);
@box-border: mix(@box, @slate, 50%);

@nav: mix(@box, @slate, 10%);
@nav-faded: mix(@box, @slate, 20%);

@bar: @green;
@bar-faded: mix(@green, @slate, 10%);
@bar-border: mix(@green, @slate, 50%);

@foot: mix(@blue, @slate, 5%);


/*
	// Structure
*/

@height: 60px;
@spacing: 10px;

@process-percent: 40%;


/*
	// Document
*/

body {
	background: @foot;
	color: @text;
	font-family: Consolas, monospace;
	font-size: 14px;
}

.slate {
	padding-bottom: 140px;
	background: @slate;
}


.limit {
	max-width: 1400px;
}

/*
	// Generic style
*/

a {
	color: @a;
	&:hover {
		color: @a-faded;
		text-decoration: none;
	}
	&:focus {
		color: @a;
	}
}

.title {
	font-family: Archive, sans-serif;
}

.l {
	width: 100px;
	color: @text-faded;
	/*&:before {
		content: '\a';
		white-space: pre;
	}*/
}

.warn {
	color: mix(@red, @white, 75%);
}

a.warn:hover {
	color: fade(@red, 75%);
}


/*
	// Generic position
*/

.right {
	text-align: right;
	//position: absolute;
	//right: 0;
}

.valign {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.hide {
	display: none;
}


/*
	// Head
*/

.head {
	//height: 200px;
}

.nav {
	margin: 60px 0 40px 0;
	float: right;
	background: @nav;
}

.nav>li>a:hover {
	background: @nav-faded;
}


/*
	// Process Bar
*/

.process-bar > div {
	height: @height;
	background: @bar;
}

#percent {
	height: @height;
	position: absolute;
	top: 0;
	left: @process-percent;
	right: 0;
	background: @bar-faded;
	border-left: @spacing solid @bar-border;
}


/*
	// Log
*/

#log {
	.hide;
}

.log {
	margin-top: @spacing * 2;
	padding-top: 15px;
	padding-bottom: 15px;
	background: @box-faded;
}

#log-box {
	margin-top: @spacing;
	height: 100px;
	//background: fade(@slate, 50%);
	font-size: 12px;
	overflow-y: scroll;
}


/*
	// Backup
*/

.b-title, .b-title-sm {
	margin-top: @spacing * 2;
	height: @height;
	background: @box-faded;
	border-left: @spacing solid @box-border;
	border-right: @spacing solid @slate;

	.title {
		float: left;
	}

	.status {
		color: @text-faded;
	}

	a {
		padding-left: 5px;
		// Icon colour
		//color: mix(@box, @slate, 50%);
	}

	&:hover, &.active {
		background: @box;
		border-left-color: @box;
		border-right-color: @box;

		.status {
			color: @text-faded-active;
		}

		a {
			// Icon colour
			//color: mix(@box, @slate, 60%);
			&:hover {
				//color: @slate;
			}
		}
	}
}

.b-title-sm {
	height: 40px;
	line-height: 40px;
	
	.title {
		float: none;
	}
}

.b-edit, .b-actions, .b-close, .b-status {
	background: @box;
	font-size: 12px;
	line-height: 1.1;
}

.b-status {
	.hide;
	margin-top: @spacing * 2;
	height: @height;
	border-left: @spacing solid @box;

	span {
		display: inline-block;
		color: @a;
	}

	.l {
		color: @text-faded-active;
	}
}

@media (max-width: 768px) {
	.b-status {
		margin-top: 0px;
	}
}

.b-space {
	margin-top: 21px;
	height: 60px;
	float: right;
}

.b-edit, .b-actions, .b-close {
	.hide;
	padding-top: @spacing;
	padding-bottom: @spacing;
	float: right;
	background: @box-faded;
	border-left: @spacing solid @slate;

	&:hover {
		//background: @box;
	}

	span {
		display: inline-block;
	}
}

@media (max-width: 768px) {
	.b-edit, .b-actions, .b-close {
		left: 0 !important;
	}
}

.b-edit a, .b-actions a {
	margin: 2px 0;
	padding: 3px 0;
	display: block;

	&:hover {
		margin: 2px -15px;
		border-left: 15px solid @box;
		border-right: 15px solid @box;
		background: @box;
	
		.l {
			color: @text-faded-active;
		}
	}
}

.b-section {
	.hide;
	margin: @spacing -15px;
	padding: @spacing 5px;
	background: @box;
	border-left: @spacing solid @box;
	
	.l, label {
		color: @text-faded-active;
	}
}

label {
	.l;
	font-weight: normal;
}
input, select {
	background: none;
	border: none;
	border-bottom: 1px solid @box-faded;
	width: 200px;
	outline: 0;
}

input[type="checkbox"] {
	width: inherit;
}

option {
	background: @box-faded;
	border: none;
}


/*
	// Foot
*/

#foot {
	height: @height;
	font-size: 22px;

	a {
		// Icon colour
		color: @box-border;
		&:hover {
			color: @box-faded;
		}
	}
}

